update to spring3, open telemetry, etc