@@ -4,7 +4,7 @@ dependencies {
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli'
 
     // Versioned by Spring:
-    implementation 'javax.validation:validation-api'
+    implementation 'jakarta.validation:jakarta.validation-api'
     implementation 'org.webjars:webjars-locator-core'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -16,9 +16,6 @@ generateSwaggerCode {
     inputFile = file('src/main/resources/api/service_openapi.yaml')
     language = 'spring'
     components = ['models', 'apis']
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
     additionalProperties = [
             modelPackage     : "${artifactGroup}.generated.model",
             apiPackage       : "${artifactGroup}.generated.api",
@@ -27,6 +24,7 @@ generateSwaggerCode {
             java8            : true,
             interfaceOnly    : 'true',
             useTags          : 'true',
+            jakarta          : 'true',
             springBootVersion: dependencyManagement.managedVersions['org.springframework.boot:spring-boot']
     ]
 }
